<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBrown"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/logo3" />

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/darkBrown"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        android:textColor="@color/colorAccent"
        android:hint="@string/hint_name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_margin="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/hint_password"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:onClick="onClickCreateOrder"
        android:textColor="@color/lightBrown"
        android:textStyle="bold"
        android:background="@color/darkBrown"
        android:text="@string/button_create_order" />

</LinearLayout>